nginx-ingress-canary/pod-v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server-v1
  labels:
    app: v1
spec:
  containers:
  - name: server
    image: phantooom/tiny-http-demo
