nginx-ingress-canary/pod-v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server-v2
  labels:
    app: v2
spec:
  containers:
  - name: server
    image: phantooom/tiny-http-demo
