nginx-ingress-canary/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-v1
spec:
  selector:
    app: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
