nginx-ingress-canary/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-v2
spec:
  selector:
    app: v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
