nginx-ingress-canary/ingress-v1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-v1
spec:
  rules:
  - host: canary.test.com
    http:
      paths:
      - backend:
          serviceName: service-v1
          servicePort: 8080
        path: /
